--- a/templates/loan-int-management.html
+++ b/templates/loan-int-management.html
@@ -1,4 +1,32 @@
-{% include 'header_new.html' %}	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>JJAPP</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
+</head>
+<body>  
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/home">JJ APP</a>
+    </div>
+    <ul class="nav navbar-nav">
+		<li {{home_menu}}><a href="/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+		<li {{ri_scores_menu}}><a href="/loan-int-management"><span class="glyphicon glyphicon-list-alt"></span> Loan Int Mgt</a></li>			
+		<li {{reports_menu}}><a href="/reports"><span class="glyphicon glyphicon-print"></span> Reports</a></li>
+    </ul>
+	
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+    </ul>	
+  </div>
+</nav>
 
 <div class="container-fluid">
     <div class="row">
@@ -34,85 +62,37 @@
 		</div>	
 		{% endif %}					
 			
-		<!--	
-		<div class="col-lg-12">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					Add New Test Area
-				</div>
-				<div class="panel-body">
-						
-						
-				<form  action="/test-area-management" method="post">
-
-					<div class="col-md-12 text-left" style="padding-bottom:10px;">
-					  <label for="cafy_link">Test Area*:</label>
-					  <div>          
-						<input class="form-control" id="test_area" name="test_area" value="" placeholder="Enter Your Test Area" required>
-					  </div>				
-					</div>
-
-					<div class="col-md-2 text-left" style="padding-bottom:10px;">
-					  <label for="user_id">Username*:</label>
-					  <div>          
-						<input type="text" class="form-control" id="user_id" name="user_id" value="{{loggedin_user}}" placeholder="CEC Id" readonly>
-					  </div>				
-					</div>			
-					
-					<div class="col-md-6 text-left" style="padding-bottom:10px;">        
-					  <div style="padding-top:25px;">
-						<button type="submit" id="add_result_submit" onClick="return validateTestareaForm();" class="btn btn-success">Submit</button>
-						<span style="margin: 0px; padding: 0px; background: #ffffff; color: #e74c3c; box-shadow: 0px 0px; border: 0px solid #e74c3c;"><b><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Note: </b> All the fields marked as (*) are mandatory </span>						
-					  </div>	  
-					</div>					
-					
-				</form>					
-						
-						
-				</div>
-			</div>
-		</div>			
-		-->		
-
 	{% if loan_int_list %}			
 	<div class="col-lg-12">
 	<div class="panel panel-primary">
-		<div class="panel-heading">Existing test areas</div>
+		<div class="panel-heading">Every month interest from existing loans</div>
 		<div class="panel-body">
 		<form  action="/test-area-remove" method="get">
 			<table class="table table-bordered" id='test-area-list-table'>							
 				<thead>								
 				<tr>
 					<th>Bank Issuer</th>
-					<th>Princi O/S</th>					
+					<th>Princi O/S</th>	
+					<th>Last Updated</th>						
 					<th>ROI</th>
 					<th>Int to be paid</th>
-					<!--
-					<th>Edit</th>
-					<th>Trash</th>	-->								
 				</tr>
 				</thead>					
 				<tbody>							
 				{% for item in loan_int_list %}
 				<tr>
 					<td>{{item.issuer}}</td>
-					<td>{{item.p_os}}</td>					
-					<td>{{item.roi}}</td>
+					<td>{{item.p_os}} <a class='btn btn-success btn-sm' title='Edit' href="loan-details-edit?tid={{item['_id']}}"><span class='glyphicon glyphicon-edit' ></span></a> </td>					
+					<td>{{item.updated_on}}</td>
+					<td>{{item.roi}}</td>					
 					<td>{{item.int_for_next_month}}</td>
-					<!--
-					<td><a class='btn btn-success btn-sm' title='Edit' href="test-area-edit?tid={{item['_id']}}"><span class='glyphicon glyphicon-edit' ></span></a></td>									
-					{% if item.used_status == 0:%}
-					<td><a class='btn btn-danger btn-sm' title='Delete' href="test-area-remove?tid={{item['_id']}}"><span class='glyphicon glyphicon-trash' ></span></a></td>		
-					{% else %}
-					<td>&nbsp;</td>
-					{% endif %}
-					-->	
 				</tr>						
 				{% endfor %}
 				<tr>
 					<td>&nbsp;</td>
 					<td>{{p_os_total}}</td>					
 					<td>&nbsp;</td>
+					<td>&nbsp;</td>					
 					<td>{{int_month_total}}</td>
 				</tr>				
 			</table>				
