Added data backup code

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -25,6 +25,7 @@
 		<li {{home_menu}}><a href="/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 		<li {{ri_scores_menu}}><a href="/loan-int-management"><span class="glyphicon glyphicon-list-alt"></span> Loan Int Mgt</a></li>			
 		<li {{reports_menu}}><a href="/reports"><span class="glyphicon glyphicon-print"></span> Reports</a></li>
+		<li><a href="/jjapp-backup"><span class="glyphicon glyphicon-print"></span> Data Wrap</a></li>		
     </ul>
 	
     <ul class="nav navbar-nav navbar-right">
